<resources>
    <string name="app_name" translatable="false">TimeMe</string>
    <string name="emailloggin">E-Mail Address</string>
    <string name="passwordlogin">Password</string>
    <string name="registerbtn">Register</string>
    <string name="menu_save">Save</string>
    <string name="confirm_newpassword">Confirm password</string>
    <string name="enter_newpassword">Enter new password</string>
    <string name="enter_odlpassword">Enter your password</string>
    <string name="enter_newEmail">Enter your email address</string>
    <string name="firstnamestring">First Name</string>
    <string name="lastnamestring">Last Name</string>
    <string name="title_section1" translatable="false">Section 1</string>
    <string name="title_section2" translatable="false">Section 2</string>
    <string name="title_section3" translatable="false">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dateformat">YYYY-MM-D</string>
    <string name="eventDescription">Description</string>
    <string name="buttonsave">Save</string>
    <string name="title">Title</string>
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic" translatable="false">Basic Example</string>
    <string name="title_activity_asynchronous" translatable="false">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="createdbyheader">Created by: </string>
    <string name="creationwhenheader">Date of creation: </string>
    <string name="creatorname">Creator full Name</string>
    <string name="creationtime">2016-27-06 at 23:15</string>
    <string name="periodeheader" translatable="false">2016-27-06  -  2016-28-06 </string>
    <string name="periodde" translatable="false">Asynchronous Events</string>
    <string name="descriptionheader">Description: </string>
    <string name="descriptiontext" translatable="false">This is a sample text of description which might be quite long and sometimes very short</string>
    <string name="noteexpandheader">Note: </string>
    <string name="noteexpand" translatable="false">This is a sample text note</string>
    <string name="PressSecondTimeToCloseApp">Click a second time to exit the application</string>
    <string name="grocery_fragment_recently_created">recently created</string>
    <string name="grocery_fragment_balance">Balance :</string>
    <string name="grocery_fragment_list_done">done</string>
    <string name="text_grocery_fragment_add_recently_button">create a new shopping List</string>
    <string name="text_create_list_add_items_button">Add shopping items to the list</string>
    <string name="text_create_list_use_on_date">Date :</string>
    <string name="text_create_list_List_empty">The list is currently empty</string>
    <string name="text_create_list_List_not_empty">Your shopping list</string>
    <string name="text_create_list_List_not_empty_more_than_one">Your shopping lists</string>
    <string name="text_add_item_to_list_add_items_button">Create a new item</string>
    <string name="text_add_item_to_list_createnewItem_button">Create a new shopping item</string>
    <string name="text_add_itme_to_list_DataBase_empty">No item in the database</string>
    <string name="text_add_itme_to_list_DataBase_not_empty">Add some item to the list</string>
    <string name="editText_create_new_item_name">Item Name</string>
    <string name="editText_create_new_item_price">Item Price</string>
    <string name="editText_create_new_item_description">Item Description</string>
    <string name="text_new_item_activity_specification">specification</string>
    <string name="text_radiobtn_create_new_item_none">None</string>
    <string name="text_radiobtn_create_new_item_by_number">Buy by number</string>
    <string name="text_radiobtn_create_new_item_by_kg">Buy by Kg</string>
    <string name="btn_grocery_create_new_item_cancle">Cancel</string>
    <string name="btn_grocery_fragment_create_new_item_create">Create</string>
    <string name="error_field_required_price">The price is missing</string>
    <string name="error_field_required_name">The name is missing</string>
    <string name="null_item_total_price" translatable="false">0,00 €</string>
    <string name="null_item_selected" translatable="false">0</string>
    <string name="grocery_add_item_to_list_to_pay_text">To spend :</string>
    <string name="grocery_list_item_title_text">From :</string>
    <string name="grocery_list_status__not_done_text">not done</string>
    <string name="grocery_list_status_done_text">done</string>
    <string name="grocery_list_subtext_name_text">Grocery list from </string>
    <string name="activity_details_shopping_list_text_sort_by">Sort by :</string>
    <string name="action_shared_shopping_List">Share</string>
    <string name="action_delete_shopping_List">Delete</string>
    <string name="grocery_add_item_to_list_already_spent_text">already spent :</string>
    <string name="household">Household</string>
    <string name="fruit">Fruit</string>
    <string name="vegetables">Vegetables</string>
    <string name="grain_products">Grain products</string>
    <string name="technology">Technology</string>
    <string name="drinks">Drinks</string>
    <string name="fats_and_oils">Fats and oils</string>
    <string name="milk_products">Milk products</string>
    <string name="spices">Spices</string>
    <string name="drugstore">Drugstore</string>
    <string name="others">Others</string>
    <string name="meat">Meat</string>
    <string name="sweets">Sweets</string>
    <string name="alphabetic">Alphabetic</string>
    <string name="rewe_Market" translatable="false">Rewe</string>
    <string name="dm_Market" translatable="false">DM</string>
    <string name="norma_Market" translatable="false">Norma</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april" translatable="false">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august" translatable="false">August</string>
    <string name="septmeber" translatable="false">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="Categories_text">CATEGORIES</string>
    <string name="Categories_Subtext_Overview">Overview</string>
    <string name="Categories_Subtext_My_Events">My Events</string>
    <string name="Categories_Subtext_My_Finances">My Finances</string>
    <string name="Categories_Subtext_My_Grocery">My Grocery</string>
    <string name="Overview_text">OVERVIEW</string>
    <string name="Settings_text">SETTINGS</string>
    <string name="About_text">ABOUT</string>
    <string name="Chat_text">CHATROOM</string>
    <string name="ViewPager_Fragment_FRAGMENTOVERVIEW">Overview</string>
    <string name="ViewPager_Fragment_FRAGMENTEVENTS">My Events</string>
    <string name="ViewPager_Fragment_FRAGMENTFINANCE">My Finance</string>
    <string name="ViewPager_Fragment_FRAGMENTSHOPPING">My Grocery</string>
    <string name="app_name_main_activity" />
    <string name="app_name_login_screen_activity">Loging</string>
    <string name="app_name_create_user_activity">Register</string>
    <string name="app_name_open_user_profile_activity">My Profile</string>
    <string name="app_name_newcalendar_activity" translatable="false">TimeMe</string>
    <string name="app_name_add_new_event_activity">Add New Event</string>
    <string name="app_name_add_new_event_fragment">Add New Event</string>
    <string name="app_name_base_activity">My Calendar</string>
    <string name="app_name_basic_activity">basic activity</string>
    <string name="app_name_create_new_shopping_list_activity">Create New Grocery List</string>
    <string name="app_name_add_item_to_list_activity">Add items To List</string>
    <string name="app_name_create_a_new_item_activity">Create New Item</string>
    <string name="app_name_details_shopping_list_activity">My Grocery List</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Private Settings</string>
    <string name="pref_general_setting">General Settings</string>
    <string name="title_intent_preference" translatable="false">android</string>
    <string name="summary_intent_preference">go to android webpage</string>
    <string name="title_activity_time_sheet" translatable="false">TimeSheetActivity</string>
    <string name="app_name_preference_app_activity">Settings</string>
    <string name="alert_dialog_changed_not_saved_title_text">You have unsaved changes</string>
    <string name="alert_dialog_changed_not_saved_message">If you choose to continue any changes will not be saved.</string>
    <string name="alert_dialog_changed_not_saved_buttonok">Continue</string>
    <string name="alert_dialog_changed_not_saved_buttoncancel">Cancel</string>
    <string name="alert_dialog_changed_not_saved_shopping_list_done_title_text">Well done!</string>
    <string name="alert_dialog_changed_not_saved_shopping_list_done_message">You just bought all items on your list. Click continue to save the list</string>
    <string name="alert_dialog_changed_not_saved_shopping_list_done_buttonok">Continue</string>
    <string name="alert_dialog_changed_not_saved_shopping_list_done_buttoncancel">Edit</string>
    <string name="text_search_itme_to_list_DataBase_empty">No such item found</string>
    <string name="text_search_itme_to_list_DataBase_not_empty">add to list</string>
    <string name="menu_refresh">Refresh</string>
    <string name="alertdialog_change_grocery_list_name_title_text">Warning!</string>
    <string name="alertdialog_change_grocery_list_name_message_text">This grocery list has been already set for use. Do you really want to change the date of use?</string>
    <string name="alertdialog_change_grocery_list_name_button_change_text">Change</string>
    <string name="alertdialog_change_grocery_list_name_button_cancel_text">Cancel</string>
    <string name="Event_Category_Category_Shopping">Grocery</string>
    <string name="Event_Category_Category_Normal" translatable="false">Normal</string>
    <string name="Event_Category_Category_Business">Business</string>
    <string name="Event_Category_Category_Birthdays">Birthdays</string>
    <string name="Event_Category_Category_Work_Plans">Work Plans</string>
    <string name="Frangment_Oveview_textView_Description_title_CardView">Your List</string>
    <string name="menu_edit">Edit</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">Delete</string>
    <string name="you_will_not_be_able_to_retrieve_this_event_delete">You will not be able to retrieve this event. Delete?</string>
    <string name="delete_this_event">Delete this event?</string>
    <string name="confirm">Confirm</string>
    <string name="messsage">messsage</string>
    <string name="exit">Exit</string>
</resources>