<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_user_profile" >
        <EditTextPreference
            android:title="@string/pref_user_name"
            android:summary="@string/pref_user_name_summary"
            android:key="prefUsername"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_update_setting" >
        <EditTextPreference android:title="Your Name"
            android:key="username"
            android:summary="Please provide your username"></EditTextPreference>
        <CheckBoxPreference android:title="Application Updates"
            android:defaultValue="false"
            android:summary="This option if selected will allow the application to check for latest versions."
            android:key="applicationUpdates" />
        <ListPreference     android:title="Download Details"
            android:summary="Select the kind of data that you would like to download"
            android:key="downloadType"
            android:defaultValue="1"
            android:entries="@array/listArray"
            android:entryValues="@array/listValues" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/pref_general_setting" >
        <PreferenceScreen
            android:title="@string/title_intent_preference"
            android:summary="@string/summary_intent_preference">

            <intent android:action="android.intent.action.VIEW"
                android:data="http://www.android.com" />

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_update_setting" >
        <EditTextPreference android:title="Your Name"
            android:key="username"
            android:summary="Please provide your username"></EditTextPreference>
        <CheckBoxPreference android:title="Application Updates"
            android:defaultValue="false"
            android:summary="This option if selected will allow the application to check for latest versions."
            android:key="applicationUpdates2" />
        <ListPreference     android:title="Download Details"
            android:summary="Select the kind of data that you would like to download"
            android:key="downloadType"
            android:defaultValue="1"
            android:entries="@array/listArray"
            android:entryValues="@array/listValues" />
    </PreferenceCategory>


</PreferenceScreen>