<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_items_added_done"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/menu_save"
        android:icon="@mipmap/ic_save_ok"/>
    <item
        android:id="@+id/action_items_added_edit"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_edit"
        android:icon="@drawable/pencil_small"/>
    <item
        android:id="@+id/action_item_list_refresh"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_refresh"
        android:icon="@mipmap/ic_save_ok"/>
</menu>