<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/enter_odlpassword"
        android:id="@+id/editTextoldPassword"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/enter_newpassword"
        android:id="@+id/editTextnewPaword"
        android:paddingTop="14dp"
        android:layout_below="@+id/editTextoldPassword"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/confirm_newpassword"
        android:paddingTop="14dp"
        android:id="@+id/editTextconfirmNewpassowrd"
        android:layout_below="@+id/editTextnewPaword"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/editTextconfirmNewpassowrd"
        android:id="@+id/linearLayout2"
        android:layout_marginTop="15dp">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/buttonchangepwCancel"
            android:layout_centerVertical="true"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/primary"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:id="@+id/buttonchangepwOk"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/primary"
           android:layout_weight="1"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>


</RelativeLayout>