<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinateLayoutcreateItem"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp"
    tools:context="com.app.bricenangue.timeme.CreatANewItemActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_create_new_item_namelayout"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/editText_create_new_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editText_create_new_item_name"
                android:inputType="textAutoCorrect"
                android:maxLines="1"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_create_new_item_pricelayout"
            android:layout_below="@+id/editText_create_new_item_namelayout"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/editText_create_new_item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editText_create_new_item_price"

                android:inputType="textAutoCorrect"
                android:maxLines="1"
                android:singleLine="true"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_create_new_item_descriptionlayput"
            android:layout_below="@+id/editText_create_new_item_pricelayout"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/editText_create_new_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editText_create_new_item_description"
                android:inputType="textAutoCorrect"
                android:maxLines="2"
                />

        </android.support.design.widget.TextInputLayout>


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_item_market_activity_create_anew_item"
            android:layout_below="@+id/spinner_item_category_activity_create_anew_item"
            android:layout_gravity="center_vertical"
            android:background="@drawable/roundpassword"/>


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_item_category_activity_create_anew_item"
            android:layout_gravity="center_vertical"
            android:layout_below="@+id/editText_create_new_item_descriptionlayput"
            android:background="@drawable/roundspinner"/>

        <TextView
            android:id="@+id/textView_new_item_activity_specification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_new_item_activity_specification"
            android:layout_below="@+id/spinner_item_market_activity_create_anew_item"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout_create_new_item_radioButton"
            android:layout_below="@+id/textView_new_item_activity_specification"
            android:layout_marginTop="5dp">
            <RadioGroup
                android:id="@+id/radiogroupcreate_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    android:id="@+id/create_new_item_readiobtn_by_kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_radiobtn_create_new_item_by_kg"
                    />

                <RadioButton
                    android:id="@+id/create_new_item_readiobtn_by_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_radiobtn_create_new_item_by_number"
                    />

                <RadioButton
                    android:id="@+id/create_new_item_readiobtn_by_none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/text_radiobtn_create_new_item_none"

                    />

            </RadioGroup>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/relative_fragment_grocery2"
            android:layout_marginTop="5dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <Button
                    android:id="@+id/button_create_item_cancle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_grocery_create_new_item_cancle"
                    android:layout_weight="1"
                    android:textColor="@color/warning_color"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
                <Button
                    android:id="@+id/button_create_item_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_grocery_fragment_create_new_item_create"
                    android:layout_weight="1"
                    android:textColor="@color/create_new_ShoppingList"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"/>
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
